# selfbot

./: Procfile  config.py  main.py  pyproject.toml  session.py
modules/: __init__.py
selfbot/: __init__.py  logger.py  main.py  util.py
selfbot/modules/: __init__.py  _addons.py  commands.py  execute.py  updates.py
tests/: test_util.py
