[project]
name = "selfbot"
version = "2026.6.5"
description = "Telegram Selfbot"
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "aiohttp==3.14.0",
    "cryptg==0.6.0",
    "hachoir==3.3.0",
    "isal==1.8.0",
    "pillow==12.2.0",
    "py-tgcalls==2.3.0",
    "telethon",
]

[project.scripts]
selfbot = "selfbot.main:run"

[tool.uv]
package = true

[tool.uv.sources]
telethon = { git = "https://codeberg.org/Lonami/Telethon", rev = "v1" }
